[package]
name = "demand-test-data-collector"
version = "0.1.0"
edition = "2021"

[dependencies]
demand-easy-sv2 = {version="0.1.0",git="https://github.com/demand-open-source/demand-easy-sv2",features = ["with_serde"]}
tokio = {version="1.36.0",features = ["full","tracing"]}
dotenv = "0.15.0"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
